# tejas-fs

./: .gitignore  Dockerfile.node  README.md  go.mod  go.sum
agni-stack/app-gateway/: Dockerfile  Makefile  go.mod  go.sum  gqlgen.yml
agni-stack/clusterapp/: Cargo.toml  Dockerfile
agni-stack/clusterapp/src/: config.rs  consumer.rs  main.rs  process.rs  shutdown.rs
agni-stack/kube8s/: Cargo.toml
agni-stack/kube8s/src/: helm.yml  lib..rs  lib.rs  main.rs
agni-stack/kube8s/src/k8s/: deploy.rs  mod.rs  network.rs  service.rs
brahma-node-creation-hub/: go.mod  main.go
brahma-schema-master/saraswati-knowledge-schema/: 004-create-cluster.sql  005-add-cluster-in-node.sql
brahma-schema-master/src/: db.rs  main.rs  migrate.rs
current-system/: Dockerfile.node  go.mod  go.sum
current-system/file-service-nodes/: main.go
current-system/node-manager/: main.go
dfs-node-image/: Dockerfile  main.go
file-service-nodes/: main.go
file-service-nodes/domain/: healthcheck.go  ingress.go  intialize.go
file-service-nodes/entities/: orbs.go  segments.go
file-service-nodes/migrations/: migration.sql
file-service-nodes/utils/: hashing.go  segmenting.go
galaxy-watcher/: go.mod  go.sum
house-of-segments/: Dockerfile  go.mod
ideation/: Node-Manager.md  Replication-Management.md  ideation.md
meta-house/: consumer.py
migrations/: 003-segments-create.sql
node-manager/: main.go
node-storage-unit/: main.go
planet-of-nodes/: go.mod  go.sum
replication-manager/: main.go
zeta-infra/: app-deployment.yml  etcd-compose.yml  kafka-compose.yml  treafik-value.yml
(+129 files in other folders)
