[package]
name = "clusterapp"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
rdkafka = { version = "0.37.0", features = ["tokio"] }
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] } 
tokio-stream = "0.1.17"
kube8s= { git = "https://github.com/dipghoshraj/media-service.git"}