[package]
name = "kube8s"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }

[lib]
name = "kube8s"